fixed layout bug in Label when you have a single word as the text added getText() to Label changed css selector for Label to include subclasses

--- a/src/org/joshy/gfx/stage/swing/default.css
+++ b/src/org/joshy/gfx/stage/swing/default.css
@@ -37,10 +37,11 @@ Tooltip {
     shrink-to-fit: true;
 }
 
-Label {
+.-class-Label {
     border-width: 0px;
     background-color: transparent;
     shrink-to-fit: true;
+    color: black;
 }
 
 .-class-Button, Togglebutton {
